force-app/main/default/objects/vlocity_ps__InterfaceImplementationDetail__c/fields/vlocity_ps__InterfaceId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__InterfaceId__c</fullName>
    <label>Interface Name</label>
    <referenceTo>vlocity_ps__InterfaceImplementation__c</referenceTo>
    <relationshipLabel>Interface Implementation Detail</relationshipLabel>
    <relationshipName>InterfaceImplementation_Detail</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>