force-app/main/default/objects/vlocity_ps__InterfaceImplementationDetail__c/fields/vlocity_ps__InterfaceName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__InterfaceName__c</fullName>
    <formula>vlocity_ps__InterfaceId__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interface Name</label>
    <type>Text</type>
</CustomField>